# TestCPP

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README  README.md  Test.cpp  Test.h  TestFramework.mk  TestFramework.project  TestFramework.txt  TestFramework.workspace  WAIVER  codecov.yml  conanfile.py  cppcheck-fix  flawfinder-fix  infer-fix  main.cpp
.github/: FUNDING.yml
.github/workflows/: cmake-build-cov-st.yml  cmake-build-cov.yml  cmake-build-test-cov.yml  cmake-build-test-nost.yml  cmake-build-test-st.yml  cmake-build-test.yml  cmake-linux-pack-nost.yml  cmake-linux-pack-st.yml  cmake-linux-pack.yml  cmake-multi-platform-nost.yml  cmake-multi-platform-st.yml  cmake-multi-platform.yml  cmake-static-analysis-dbg.yml  cmake-static-analysis-rls.yml  cmake-static-analysis.yml  cmake-windows-pack-nost.yml  cmake-windows-pack-st.yml  codeql.yml  shellcheck.yml
cmake/: Analyzing.cmake  BuildTypeHandling.cmake  Includes.cmake  Installing.cmake  Linking.cmake  Packing.cmake  SubmodulesInit.cmake  Targets.cmake  TestCPPConfig.cmake.in  Testing.cmake  VarChecks.cmake
cmake/link/: Boost.Stacktrace.cmake  Demo.cmake  TestCPPWithCoverage.cmake  Tests.cmake  TestsWithCoverage.cmake
cmake/presets/: building.json  configuring.json  packaging.json  testing.json
custom-overlay/testcpp/: portfile.cmake  vcpkg.json
demo/include/: tests.h
demo/src/: main.cpp  tests.cpp
include/: Test.h  TestCPP.h  TestCPPUtil.h  TestUtil.h  tests.hpp
include/internal/: TestCPPAssertions.h  TestCPPCommon.h  TestCPPExceptions.h  TestCPPTestCase.h  TestCPPTestSuite.h  TestCPPUtil.h
res/license/wix/: LICENSE.rtf
src/: Test.cpp  TestCPP.cpp  TestCPPAssertions.cpp  TestCPPExceptions.cpp  TestCPPTestCase.cpp  TestCPPTestSuite.cpp  TestCPPUtil.cpp  TestUtil.cpp  main.cpp
test/include/: TestCPPTests.hpp
test/include/Assertions/: AssertionsBasicSuite.h  AssertionsSuite.h  AssertionsSuites.h  AssertionsTests.h  BasicAssertionsTests.h
test/include/Exceptions/: ExceptionsSuite.h  ExceptionsTests.h
test/include/TestCase/: TestCaseSuite.h  TestCaseSuite.hpp  TestCaseTestChunks.h  TestCaseTests.h  TestCaseTests.hpp
test/include/TestSuite/: TestSuiteConstructionSuite.h  TestSuiteRunningSuite.h  TestSuiteSuite.h  TestSuiteSuite.hpp  TestSuiteTestPassedMessageSuite.h  TestSuiteTests.h  TestSuiteTests.hpp
test/src/: TestCPPAssertionsBasicMain.cpp  TestCPPAssertionsMain.cpp  TestCPPExceptionsMain.cpp  TestCPPTestCaseMain.cpp  TestCPPTestMain.cpp  TestCPPTestSuiteConstructionMain.cpp  TestCPPTestSuiteMain.cpp  TestCPPTestSuiteRunningMain.cpp  TestCPPTestSuiteTestPassedMessageMain.cpp
test/src/Assertions/: AssertionsBasicTests.cpp  AssertionsTests.cpp  BasicAssertionsTests.cpp
test/src/Exceptions/: ExceptionsTests.cpp
test/src/TestCase/: TestCaseTestChunks.cpp  TestCaseTests.cpp
test/src/TestSuite/: TestSuiteConstructionTests.cpp  TestSuiteRunningTests.cpp  TestSuiteTestPassedMessageTests.cpp  TestSuiteTests.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
